Bugfix for invisible tool + bugfix course sorter

--- a/src/Chamilo/Application/Weblcms/Resources/Css/Aqua/Stylesheet.css
+++ b/src/Chamilo/Application/Weblcms/Resources/Css/Aqua/Stylesheet.css
@@ -449,6 +449,7 @@ table tr td.column_tool_title {
 	margin-bottom: 0;
 }
 
+.tool-list-content .tool a.invisible-tool,
 .course-list-tab-content .list-group-item.invisible-course .list-group-item-heading,
 .course-list-tab-content .list-group-item.invisible-course .list-group-item-heading a,
 .course-list-tab-content .list-group-item.invisible-course .list-group-item-text {
